fixing absolute paths and adding sample archive

--- a/css/prettyPhoto.css
+++ b/css/prettyPhoto.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/images/jiraiya.jpg");
+  background-image: url("../images/jiraiya.jpg");
   background-repeat: no-repeat;
 }
 
